[tool.poetry]
name = "membench"
version = "0.1.0"
description = ""
authors = ["Riley Shahar <riley.shahar@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pyls-flake8 = "^0.4.0"
pyls-isort = "^0.2.2"
python-lsp-server = "^1.3.3"
python-lsp-black = "^1.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.4"
flake8-bugbear = "^22.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src"
strict = true
warn_unused_ignores = false

[tool.pylint.MASTER]
disable = ["no-else-return"]

[tool.pylint.format]
max-line-length = 88
good-names = ["i", "j", "k", "s", "x", "y", "_"]

[tool.pydocstyle]
convention = "numpy"
